--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,7 @@ jobs:
         run: npm ci
 
       - name: Build the app
-        run: |
-          npm run build
+        run: npm run build
           
       - name: Setup Pages
         uses: actions/configure-pages@v2
@@ -43,6 +42,6 @@ jobs:
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1.0.4
         with:
-          path: 'build'
+          path: 'dist'
       - name: Deploy GitHub Pages site
         uses: actions/deploy-pages@v1.2.2
